--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@ span{display:block;font-size:12px;line-height:12px;}
 <h2>更先进的浏览器</h2>
 <p>推荐使用以下浏览器的最新版本。如果你的电脑已有以下浏览器的最新版本则直接使用该浏览器访问<b id="referrer"></b>即可。</p>
 <ul class="browser">
-<li><a href="http://www.google.cn/chrome/browser/index.html?hl=zh-CN&standalone=1"><img src="images/chrome.jpg" alt="谷歌浏览器" width="34" height="34" /> 谷歌浏览器<span>Google Chrome</span></a></li>
-<li><a href="http://download.firefox.com.cn/releases/stub/official/zh-CN/Firefox-latest.exe"><img src="images/firefox.jpg" alt="火狐浏览器" width="34" height="34" /> 火狐浏览器<span>Mozilla Firefox</span></a></li>
-<li><a href="http://windows.microsoft.com/zh-cn/internet-explorer/download-ie"><img src="images/ie.jpg" alt="IE浏览器" width="34" height="34" /> IE浏览器<span>Internet Explorer</span></a></li>
-<li><a href="http://jifendownload.2345.cn/jifen_2345/2345chrome_k2345886.exe" title="基于 Chromium 开源项目的国产浏览器"><img src="images/2345chrome.png" alt="2345加速浏览器" width="34" height="34" /> 加速浏览器 <span>2345 chrome</span></a></li>
+<li><a href="http://windows.microsoft.com/zh-cn/internet-explorer/download-ie"><img src="images/ie.png" alt="IE浏览器" width="34" height="34" /> IE浏览器<span>Internet Explorer</span></a></li>
+<li><a href="http://chrome.360.cn/"><img src="images/360chrome.png" alt="">360极速浏览器<span>360 chrome</span></a></li>
+<li><a href="http://download.firefox.com.cn/releases/stub/official/zh-CN/Firefox-latest.exe"><img src="images/firefox.png" alt="火狐浏览器" width="34" height="34" /> 火狐浏览器<span>Mozilla Firefox</span></a></li>
+<li><a href="http://www.google.cn/chrome/browser/index.html?hl=zh-CN&standalone=1"><img src="images/chrome.png" alt="谷歌浏览器" width="34" height="34" /> 谷歌浏览器<span>Google Chrome</span></a></li>
 <div class="clean"></div>
 </ul>
 <hr>
