Chrome 浏览器下载链接换到百度软件中心下载

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ span{display:block;font-size:12px;line-height:12px;}
 <li><a href="http://windows.microsoft.com/zh-cn/internet-explorer/download-ie"><img src="images/ie.png" alt="IE浏览器" width="34" height="34" /> IE浏览器<span>Internet Explorer</span></a></li>
 <li><a href="http://chrome.360.cn/"><img src="images/360chrome.png" alt="">360极速浏览器<span>360 chrome</span></a></li>
 <li><a href="http://download.firefox.com.cn/releases/stub/official/zh-CN/Firefox-latest.exe"><img src="images/firefox.png" alt="火狐浏览器" width="34" height="34" /> 火狐浏览器<span>Mozilla Firefox</span></a></li>
-<li><a href="http://www.google.cn/chrome/browser/index.html?hl=zh-CN&standalone=1"><img src="images/chrome.png" alt="谷歌浏览器" width="34" height="34" /> 谷歌浏览器<span>Google Chrome</span></a></li>
+<li><a href="http://rj.baidu.com/search/index/?kw=%E8%B0%B7%E6%AD%8C%E6%B5%8F%E8%A7%88%E5%99%A8"><img src="images/chrome.png" alt="谷歌浏览器" width="34" height="34" /> 谷歌浏览器<span>Google Chrome</span></a></li>
 <div class="clean"></div>
 </ul>
 <hr>
